feat(source): add delete user logic
